# SmartPyhome

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.override.yml  compose.prod.yml  compose.yml  db.sqlite  docker-compose.yaml  main.py  package.json  pyproject.toml  requirements.txt
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: cameras.py
app/core/: config.py
app/services/: camera_manager.py  camera_runtime.py
app/templates/: index.html  login.html
backend/: pyproject.toml
backend/app/: crud.py  models.py
backend/app/alembic/versions/: b3c4d5e6f7a8_rename_email_to_username.py  c1d2e3f4a5b6_add_computer_table.py
backend/app/api/: main.py
backend/app/api/routes/: computers.py  login.py  private.py  users.py
backend/app/core/: config.py  db.py
camera_service/: camera.py  camera_server.py  port_connection.py
frontend/: index.html  package.json
frontend/src/: routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  EditUser.tsx
frontend/src/components/Common/: Footer.tsx  Logo.tsx
frontend/src/components/Computers/: AddComputer.tsx  ComputerActionsMenu.tsx  DeleteComputer.tsx  (+2 more)
frontend/src/routes/: login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
prisma/: database.db-journal  schema.prisma
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: camera.py  cases.py  users.py
src/routes/: camera.py  cases.py
src/scripts/: cases.py  scan_devices.py
templates/: index.html
(+9 files in other folders)
